<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical">
	<TextView
	    android:gravity="center"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/search_distance" />
	<Spinner
	    android:id="@+id/searchDistanceSpinner" 
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
	<TextView
	    android:gravity="center"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/search_price" />
	<Spinner
	    android:id="@+id/searchPriceSpinner" 
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
	<TextView
	    android:gravity="center"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/search_time" />
	<Spinner
	    android:id="@+id/searchTimeSpinner" 
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
	
	<TextView
	    android:gravity="center"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/search_dishTypes" />
	<ListView
	    android:layout_width="match_parent"
	    android:layout_height="0dip"
	    android:layout_weight="1" 
	    android:id="@+id/searchDishTypesList"/>
	<Button
	    android:id="@+id/searchSearchBtn"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/search_searchBtn"
	    android:gravity="center"
	    android:layout_gravity="center_horizontal" />
	
</LinearLayout>
